--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ja">
   <head>
-    <title>FC.torque.homepag</title>
+    <title>FC.torque.homepagVS</title>
     <dontchange>
       <header>
         <img
@@ -402,7 +402,18 @@
         <li>service |</li>
         <li><a href="file:///C:/Users/ktamu/OneDrive/%E3%83%87%E3%82%B9%E3%82%AF%E3%83%88%E3%83%83%E3%83%97/VS.HTML.1st/HTML.CONTACTUS/index.html">Contact Us |</a></li>
        </ul>
-       <r><a href="https://www.u-hyogo.ac.jp/">兵庫県立大学公式ホームページ</a></r>
+       <r>
+         <button type="refresh">
+           <a href="https://www.u-hyogo.ac.jp/">兵庫県立大学公式ホームページ</a>
+         </button>
+       </r>
+       
+       
+       <r2>
+          <form>
+            <button type="refresh" style="width : 88% ; height : 120%"> Back to top</button>
+          </form>
+       </r2>
     </footer>
   </body>
 
