--- a/index.html
+++ b/index.html
@@ -392,7 +392,7 @@
       >
       </iframe>
       <img
-        src="https://cdn.glitch.global/d35e584e-6d4b-4942-8f4b-58c51ffc1dc0/qrcode_fc-torque-beta.glitch.me.png?v=1653126633465"
+        src="https://cdn.glitch.global/6bd0adfc-9326-4f48-9c44-bc869c5d1c56/qrcode_kei-pine.github.io.png?v=1653491610763"
       />
     
     </div>
