--- a/HTML.basic/index.html
+++ b/HTML.basic/index.html
@@ -5,8 +5,7 @@
     <dontchange>
       <header>
         
-        <img
-                src="https://cdn.glitch.global/d35e584e-6d4b-4942-8f4b-58c51ffc1dc0/HEADER%20fcv1.jpg?v=1653128873776"
+        <img src="https://cdn.glitch.global/d35e584e-6d4b-4942-8f4b-58c51ffc1dc0/HEADER%20fcv1.jpg?v=1653128873776" width="100%"
               /> 
         <h1 style="text-align:center">「FC-TORQUE」</h1>
         <div align="center">
