--- a/HTML.basic/index.html
+++ b/HTML.basic/index.html
@@ -389,10 +389,11 @@
         loading="lazy"
         referrerpolicy="no-referrer-when-downgrade"
       >
-      </iframe>
-      <img
-        src="https://cdn.glitch.global/6bd0adfc-9326-4f48-9c44-bc869c5d1c56/qrcode_kei-pine.github.io.png?v=1653491610763"
-      />
+         </iframe>
+          <iframe img
+        src="https://cdn.glitch.global/6bd0adfc-9326-4f48-9c44-bc869c5d1c56/qrcode_kei-pine.github.io.png?v=1653491610763">
+          </iframe>
+      
     
     </div>
     <footer>
